crates/php-parser/tests/snapshots/integration__exit_variants.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php exit; exit(); exit(0); die; die(); die('error');
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": null
          },
          "span": {
            "start": 6,
            "end": 10
          }
        }
      },
      "span": {
        "start": 6,
        "end": 12
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": null
          },
          "span": {
            "start": 12,
            "end": 18
          }
        }
      },
      "span": {
        "start": 12,
        "end": 20
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": {
              "kind": {
                "Int": 0
              },
              "span": {
                "start": 25,
                "end": 26
              }
            }
          },
          "span": {
            "start": 20,
            "end": 27
          }
        }
      },
      "span": {
        "start": 20,
        "end": 29
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": null
          },
          "span": {
            "start": 29,
            "end": 32
          }
        }
      },
      "span": {
        "start": 29,
        "end": 34
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": null
          },
          "span": {
            "start": 34,
            "end": 39
          }
        }
      },
      "span": {
        "start": 34,
        "end": 41
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": {
              "kind": {
                "String": "error"
              },
              "span": {
                "start": 45,
                "end": 52
              }
            }
          },
          "span": {
            "start": 41,
            "end": 53
          }
        }
      },
      "span": {
        "start": 41,
        "end": 54
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 54
  }
}
