crates/php-parser/tests/snapshots/integration__expr_arraydef.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": []
          },
          "span": {
            "start": 7,
            "end": 14
          }
        }
      },
      "span": {
        "start": 7,
        "end": 16
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": [
              {
                "key": null,
                "value": {
                  "kind": {
                    "String": "a"
                  },
                  "span": {
                    "start": 22,
                    "end": 25
                  }
                },
                "unpack": false,
                "span": {
                  "start": 22,
                  "end": 25
                }
              }
            ]
          },
          "span": {
            "start": 16,
            "end": 26
          }
        }
      },
      "span": {
        "start": 16,
        "end": 28
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": [
              {
                "key": null,
                "value": {
                  "kind": {
                    "String": "a"
                  },
                  "span": {
                    "start": 34,
                    "end": 37
                  }
                },
                "unpack": false,
                "span": {
                  "start": 34,
                  "end": 37
                }
              }
            ]
          },
          "span": {
            "start": 28,
            "end": 40
          }
        }
      },
      "span": {
        "start": 28,
        "end": 42
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": [
              {
                "key": null,
                "value": {
                  "kind": {
                    "String": "a"
                  },
                  "span": {
                    "start": 48,
                    "end": 51
                  }
                },
                "unpack": false,
                "span": {
                  "start": 48,
                  "end": 51
                }
              },
              {
                "key": null,
                "value": {
                  "kind": {
                    "String": "b"
                  },
                  "span": {
                    "start": 53,
                    "end": 56
                  }
                },
                "unpack": false,
                "span": {
                  "start": 53,
                  "end": 56
                }
              }
            ]
          },
          "span": {
            "start": 42,
            "end": 57
          }
        }
      },
      "span": {
        "start": 42,
        "end": 59
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": [
              {
                "key": null,
                "value": {
                  "kind": {
                    "String": "a"
                  },
                  "span": {
                    "start": 65,
                    "end": 68
                  }
                },
                "unpack": false,
                "span": {
                  "start": 65,
                  "end": 68
                }
              },
              {
                "key": null,
                "value": {
                  "kind": {
                    "Variable": "b"
                  },
                  "span": {
                    "start": 71,
                    "end": 73
                  }
                },
                "unpack": false,
                "by_ref": true,
                "span": {
                  "start": 70,
                  "end": 73
                }
              },
              {
                "key": {
                  "kind": {
                    "String": "c"
                  },
                  "span": {
                    "start": 75,
                    "end": 78
                  }
                },
                "value": {
                  "kind": {
                    "String": "d"
                  },
                  "span": {
                    "start": 82,
                    "end": 85
                  }
                },
                "unpack": false,
                "span": {
                  "start": 75,
                  "end": 85
                }
              },
              {
                "key": {
                  "kind": {
                    "String": "e"
                  },
                  "span": {
                    "start": 87,
                    "end": 90
                  }
                },
                "value": {
                  "kind": {
                    "Variable": "f"
                  },
                  "span": {
                    "start": 95,
                    "end": 97
                  }
                },
                "unpack": false,
                "by_ref": true,
                "span": {
                  "start": 87,
                  "end": 97
                }
              }
            ]
          },
          "span": {
            "start": 59,
            "end": 98
          }
        }
      },
      "span": {
        "start": 59,
        "end": 123
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": []
          },
          "span": {
            "start": 123,
            "end": 125
          }
        }
      },
      "span": {
        "start": 123,
        "end": 127
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": [
              {
                "key": null,
                "value": {
                  "kind": {
                    "Int": 1
                  },
                  "span": {
                    "start": 128,
                    "end": 129
                  }
                },
                "unpack": false,
                "span": {
                  "start": 128,
                  "end": 129
                }
              },
              {
                "key": null,
                "value": {
                  "kind": {
                    "Int": 2
                  },
                  "span": {
                    "start": 131,
                    "end": 132
                  }
                },
                "unpack": false,
                "span": {
                  "start": 131,
                  "end": 132
                }
              },
              {
                "key": null,
                "value": {
                  "kind": {
                    "Int": 3
                  },
                  "span": {
                    "start": 134,
                    "end": 135
                  }
                },
                "unpack": false,
                "span": {
                  "start": 134,
                  "end": 135
                }
              }
            ]
          },
          "span": {
            "start": 127,
            "end": 136
          }
        }
      },
      "span": {
        "start": 127,
        "end": 138
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": [
              {
                "key": {
                  "kind": {
                    "String": "a"
                  },
                  "span": {
                    "start": 139,
                    "end": 142
                  }
                },
                "value": {
                  "kind": {
                    "String": "b"
                  },
                  "span": {
                    "start": 146,
                    "end": 149
                  }
                },
                "unpack": false,
                "span": {
                  "start": 139,
                  "end": 149
                }
              }
            ]
          },
          "span": {
            "start": 138,
            "end": 150
          }
        }
      },
      "span": {
        "start": 138,
        "end": 151
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 151
  }
}
