crates/php-parser/tests/snapshots/integration__expr_arrow_function.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "ArrowFunction": {
              "is_static": false,
              "by_ref": false,
              "params": [
                {
                  "name": "a",
                  "type_hint": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "bool"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 9,
                          "end": 13
                        }
                      }
                    },
                    "span": {
                      "start": 9,
                      "end": 13
                    }
                  },
                  "default": null,
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 9,
                    "end": 16
                  }
                }
              ],
              "return_type": null,
              "body": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 21,
                  "end": 23
                }
              },
              "attributes": []
            }
          },
          "span": {
            "start": 6,
            "end": 23
          }
        }
      },
      "span": {
        "start": 6,
        "end": 25
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "ArrowFunction": {
              "is_static": false,
              "by_ref": false,
              "params": [
                {
                  "name": "x",
                  "type_hint": null,
                  "default": {
                    "kind": {
                      "Int": 42
                    },
                    "span": {
                      "start": 33,
                      "end": 35
                    }
                  },
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 28,
                    "end": 35
                  }
                }
              ],
              "return_type": null,
              "body": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 40,
                  "end": 42
                }
              },
              "attributes": []
            }
          },
          "span": {
            "start": 25,
            "end": 42
          }
        }
      },
      "span": {
        "start": 25,
        "end": 44
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "ArrowFunction": {
              "is_static": true,
              "by_ref": false,
              "params": [
                {
                  "name": "x",
                  "type_hint": null,
                  "default": null,
                  "by_ref": true,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 54,
                    "end": 57
                  }
                }
              ],
              "return_type": null,
              "body": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 62,
                  "end": 64
                }
              },
              "attributes": []
            }
          },
          "span": {
            "start": 44,
            "end": 64
          }
        }
      },
      "span": {
        "start": 44,
        "end": 66
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "ArrowFunction": {
              "is_static": false,
              "by_ref": true,
              "params": [
                {
                  "name": "x",
                  "type_hint": null,
                  "default": null,
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 70,
                    "end": 72
                  }
                }
              ],
              "return_type": null,
              "body": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 77,
                  "end": 79
                }
              },
              "attributes": []
            }
          },
          "span": {
            "start": 66,
            "end": 79
          }
        }
      },
      "span": {
        "start": 66,
        "end": 81
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "ArrowFunction": {
              "is_static": false,
              "by_ref": false,
              "params": [
                {
                  "name": "x",
                  "type_hint": null,
                  "default": null,
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 84,
                    "end": 86
                  }
                },
                {
                  "name": "rest",
                  "type_hint": null,
                  "default": null,
                  "by_ref": false,
                  "variadic": true,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 88,
                    "end": 96
                  }
                }
              ],
              "return_type": null,
              "body": {
                "kind": {
                  "Variable": "rest"
                },
                "span": {
                  "start": 101,
                  "end": 106
                }
              },
              "attributes": []
            }
          },
          "span": {
            "start": 81,
            "end": 106
          }
        }
      },
      "span": {
        "start": 81,
        "end": 108
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "ArrowFunction": {
              "is_static": false,
              "by_ref": false,
              "params": [],
              "return_type": {
                "kind": {
                  "Named": {
                    "parts": [
                      "int"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 114,
                      "end": 117
                    }
                  }
                },
                "span": {
                  "start": 114,
                  "end": 117
                }
              },
              "body": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 121,
                  "end": 123
                }
              },
              "attributes": []
            }
          },
          "span": {
            "start": 108,
            "end": 123
          }
        }
      },
      "span": {
        "start": 108,
        "end": 126
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "ArrowFunction": {
              "is_static": false,
              "by_ref": false,
              "params": [
                {
                  "name": "a",
                  "type_hint": null,
                  "default": null,
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 129,
                    "end": 131
                  }
                },
                {
                  "name": "b",
                  "type_hint": null,
                  "default": null,
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 133,
                    "end": 135
                  }
                }
              ],
              "return_type": null,
              "body": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Variable": "a"
                      },
                      "span": {
                        "start": 140,
                        "end": 142
                      }
                    },
                    "op": "LogicalAnd",
                    "right": {
                      "kind": {
                        "Variable": "b"
                      },
                      "span": {
                        "start": 147,
                        "end": 149
                      }
                    }
                  }
                },
                "span": {
                  "start": 140,
                  "end": 149
                }
              },
              "attributes": []
            }
          },
          "span": {
            "start": 126,
            "end": 149
          }
        }
      },
      "span": {
        "start": 126,
        "end": 151
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "ArrowFunction": {
              "is_static": false,
              "by_ref": false,
              "params": [
                {
                  "name": "a",
                  "type_hint": null,
                  "default": null,
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 154,
                    "end": 156
                  }
                },
                {
                  "name": "b",
                  "type_hint": null,
                  "default": null,
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 158,
                    "end": 160
                  }
                }
              ],
              "return_type": null,
              "body": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Variable": "a"
                      },
                      "span": {
                        "start": 165,
                        "end": 167
                      }
                    },
                    "op": "BooleanAnd",
                    "right": {
                      "kind": {
                        "Variable": "b"
                      },
                      "span": {
                        "start": 171,
                        "end": 173
                      }
                    }
                  }
                },
                "span": {
                  "start": 165,
                  "end": 173
                }
              },
              "attributes": []
            }
          },
          "span": {
            "start": 151,
            "end": 173
          }
        }
      },
      "span": {
        "start": 151,
        "end": 174
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 174
  }
}
