crates/php-parser/tests/snapshots/integration__expr_closure.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Closure": {
              "is_static": false,
              "by_ref": false,
              "params": [
                {
                  "name": "a",
                  "type_hint": null,
                  "default": null,
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 15,
                    "end": 17
                  }
                }
              ],
              "use_vars": [],
              "return_type": null,
              "body": [
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "Variable": "a"
                      },
                      "span": {
                        "start": 21,
                        "end": 23
                      }
                    }
                  },
                  "span": {
                    "start": 21,
                    "end": 25
                  }
                }
              ],
              "attributes": []
            }
          },
          "span": {
            "start": 6,
            "end": 26
          }
        }
      },
      "span": {
        "start": 6,
        "end": 28
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Closure": {
              "is_static": false,
              "by_ref": false,
              "params": [
                {
                  "name": "a",
                  "type_hint": null,
                  "default": null,
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 37,
                    "end": 39
                  }
                }
              ],
              "use_vars": [
                {
                  "name": "b",
                  "by_ref": false,
                  "span": {
                    "start": 45,
                    "end": 47
                  }
                }
              ],
              "return_type": null,
              "body": [],
              "attributes": []
            }
          },
          "span": {
            "start": 28,
            "end": 51
          }
        }
      },
      "span": {
        "start": 28,
        "end": 53
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Closure": {
              "is_static": false,
              "by_ref": false,
              "params": [],
              "use_vars": [
                {
                  "name": "a",
                  "by_ref": false,
                  "span": {
                    "start": 68,
                    "end": 70
                  }
                },
                {
                  "name": "b",
                  "by_ref": true,
                  "span": {
                    "start": 72,
                    "end": 75
                  }
                }
              ],
              "return_type": null,
              "body": [],
              "attributes": []
            }
          },
          "span": {
            "start": 53,
            "end": 79
          }
        }
      },
      "span": {
        "start": 53,
        "end": 81
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Closure": {
              "is_static": false,
              "by_ref": true,
              "params": [
                {
                  "name": "a",
                  "type_hint": null,
                  "default": null,
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 92,
                    "end": 94
                  }
                }
              ],
              "use_vars": [],
              "return_type": null,
              "body": [],
              "attributes": []
            }
          },
          "span": {
            "start": 81,
            "end": 98
          }
        }
      },
      "span": {
        "start": 81,
        "end": 100
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Closure": {
              "is_static": true,
              "by_ref": false,
              "params": [],
              "use_vars": [],
              "return_type": null,
              "body": [],
              "attributes": []
            }
          },
          "span": {
            "start": 100,
            "end": 120
          }
        }
      },
      "span": {
        "start": 100,
        "end": 122
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Closure": {
              "is_static": false,
              "by_ref": false,
              "params": [
                {
                  "name": "a",
                  "type_hint": null,
                  "default": null,
                  "by_ref": false,
                  "variadic": false,
                  "is_readonly": false,
                  "is_final": false,
                  "visibility": null,
                  "set_visibility": null,
                  "attributes": [],
                  "span": {
                    "start": 131,
                    "end": 133
                  }
                }
              ],
              "use_vars": [],
              "return_type": {
                "kind": {
                  "Named": {
                    "parts": [
                      "array"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 137,
                      "end": 142
                    }
                  }
                },
                "span": {
                  "start": 137,
                  "end": 142
                }
              },
              "body": [],
              "attributes": []
            }
          },
          "span": {
            "start": 122,
            "end": 145
          }
        }
      },
      "span": {
        "start": 122,
        "end": 147
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Closure": {
              "is_static": false,
              "by_ref": false,
              "params": [],
              "use_vars": [
                {
                  "name": "a",
                  "by_ref": false,
                  "span": {
                    "start": 162,
                    "end": 164
                  }
                }
              ],
              "return_type": {
                "kind": {
                  "Named": {
                    "parts": [
                      "Foo",
                      "Bar"
                    ],
                    "kind": "FullyQualified",
                    "span": {
                      "start": 168,
                      "end": 177
                    }
                  }
                },
                "span": {
                  "start": 168,
                  "end": 177
                }
              },
              "body": [],
              "attributes": []
            }
          },
          "span": {
            "start": 147,
            "end": 179
          }
        }
      },
      "span": {
        "start": 147,
        "end": 180
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 180
  }
}
