crates/php-parser/tests/snapshots/integration__expr_concatprecedence_1.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Int": 1
                      },
                      "span": {
                        "start": 6,
                        "end": 7
                      }
                    },
                    "op": "Add",
                    "right": {
                      "kind": {
                        "Int": 2
                      },
                      "span": {
                        "start": 10,
                        "end": 11
                      }
                    }
                  }
                },
                "span": {
                  "start": 6,
                  "end": 11
                }
              },
              "op": "Concat",
              "right": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Int": 3
                      },
                      "span": {
                        "start": 14,
                        "end": 15
                      }
                    },
                    "op": "Add",
                    "right": {
                      "kind": {
                        "Int": 4
                      },
                      "span": {
                        "start": 18,
                        "end": 19
                      }
                    }
                  }
                },
                "span": {
                  "start": 14,
                  "end": 19
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 19
          }
        }
      },
      "span": {
        "start": 6,
        "end": 21
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Int": 1
                      },
                      "span": {
                        "start": 21,
                        "end": 22
                      }
                    },
                    "op": "ShiftLeft",
                    "right": {
                      "kind": {
                        "Int": 2
                      },
                      "span": {
                        "start": 26,
                        "end": 27
                      }
                    }
                  }
                },
                "span": {
                  "start": 21,
                  "end": 27
                }
              },
              "op": "Concat",
              "right": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Int": 3
                      },
                      "span": {
                        "start": 30,
                        "end": 31
                      }
                    },
                    "op": "ShiftLeft",
                    "right": {
                      "kind": {
                        "Int": 4
                      },
                      "span": {
                        "start": 35,
                        "end": 36
                      }
                    }
                  }
                },
                "span": {
                  "start": 30,
                  "end": 36
                }
              }
            }
          },
          "span": {
            "start": 21,
            "end": 36
          }
        }
      },
      "span": {
        "start": 21,
        "end": 37
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 37
  }
}
